# deepwiki-mcp-cli-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: publish.yaml
src/: cli.rs  main.rs  mcp.rs
src/commands/: ask.rs  check.rs  mod.rs  read.rs  search.rs
